@startuml
'https://plantuml.com/class-diagram

interface TileAction
abstract class NormalTile
abstract class SpecialTile

class Board {

}
class Die
class Dice
class Player
class LadderTile
class SnakeTile
class Tile

TileAction <|-- NormalTile
TileAction <|-- SpecialTile

SpecialTile <|-- LadderTile
SpecialTile <|-- SnakeTile
NormalTile <|-- Tile


Board <|--|> Player
Board <- LadderTile
Board <- SnakeTile
Board <- Tile

Die <|-- Dice
Die <- Board



@enduml